[package]
name = "fltk-webview"
version = "0.2.14"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Webview for embedded fltk windows"
repository = "https://github.com/fltk-rs/fltk-webview"
documentation = "https://docs.rs/fltk-webview"
keywords = ["gui", "widgets", "bindings", "graphics", "webview"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = { version = "1.3", features = ["fltk-bundled"] }
# fltk = "1.3"
fltk-webview-sys = { version = "0.2.8", path = "fltk-webview-sys" }
[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"

# for the examples
[dev-dependencies]
pulldown-cmark = "0.9"
tinyjson = "2"
