[package]
name = "fltk-webview"
version = "0.2.15"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>", "Adia Robbie <adyaro37@gmail.com>"]
edition = "2018"
description = "Webview for embedded fltk windows"
repository = "https://github.com/fltk-rs/fltk-webview"
documentation = "https://docs.rs/fltk-webview"
keywords = ["gui", "widgets", "bindings", "graphics", "webview"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
# fltk = { version = "1.3", features = ["fltk-bundled"] }
fltk = "1.3"
fltk-webview-sys = { version = "0.2.10", path = "fltk-webview-sys" }

# for the examples
[dev-dependencies]
pulldown-cmark = "0.9"
tinyjson = "2"
