[package]
name = "fltk-webview"
version = "0.4.1"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>", "Adia Robbie <adyaro37@gmail.com>"]
edition = "2021"
description = "Webview for embedded fltk windows"
repository = "https://github.com/fltk-rs/fltk-webview"
documentation = "https://docs.rs/fltk-webview"
keywords = ["gui", "widgets", "bindings", "graphics", "webview"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
# fltk = { version = "1.4", features = ["fltk-bundled"] }
fltk = "1.4"
fltk-webview-sys = { version = "0.3.2", path = "fltk-webview-sys" }

# for the examples
[dev-dependencies]
pulldown-cmark = "0.9"
tinyjson = "2"
