[package]
name = "fltk-webview-sys"
version = "0.4.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>", "Adia Robbie <adyaro37@gmail.com>"]
edition = "2018"
description = "Webview for embedded fltk windows"
repository = "https://github.com/fltk-rs/fltk-webview"
documentation = "https://docs.rs/fltk-webview"
keywords = ["gui", "widgets", "bindings", "graphics", "webview"]
categories = ["gui"]
readme = "../README.md"
license = "MIT"

[dependencies]
wv = "0.2"

[build-dependencies]
pkg-config = "0.3"
cc = "1"